--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1203,8 +1203,6 @@ text-transform: uppercase;
 }
 
 .cu-h3-work {
-  position: -webkit-sticky;
-  position: sticky;
   top: 80px;
   text-align: center;
   color: #000;
@@ -1367,6 +1365,12 @@ text-transform: uppercase;
 }
 
 /* Casey */
+.cu-card-details {
+  position : relative;
+  display: none;
+  opacity : 1;
+}
+
 .cu-work-card {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   transform-origin: center;
@@ -1377,7 +1381,7 @@ text-transform: uppercase;
   justify-content: space-between;
   padding: 20px 20px;
   box-sizing: border-box; 
-  transition: transform 0.6s, width 0.8s ease-in-out;
+  transition: transform 0.6s, width 0.8s ease-in-out, height 0.6s ease-in-out;
   z-index: 1;
   top: 150px;
   width: 60%;
@@ -1435,10 +1439,36 @@ text-transform: uppercase;
   justify-content: flex-end;
 }
 
-
 .cu-card-arrow-img {
   width: 50px;
+  transition: opacity 2s ease;
 }
+
+.cu-card-arrow-img {
+  opacity: 1;
+  margin-top: -10%;
+}
+
+.cu-work-card:hover .cu-card-arrow-img {
+  animation: cu-work-arrow-animate 1s infinite;
+  margin-top: 0;
+}
+
+@keyframes cu-work-arrow-animate {
+  0% {
+      opacity: 0.8;
+      transform: translate(0,0);
+  }
+  50% {
+      opacity: 1;
+      transform: translate(10px, 0);
+  }
+  100% {
+      opacity: 0.8;
+      transform: translate(0,0);
+  }
+}
+
 
 
 
@@ -2764,6 +2794,9 @@ font-family: Montserrat, sans-serif;
     width: 95%;
     display: flex;
     justify-content: flex-end;
+  }
+  .cu-card-arrow-img {
+    margin-top: 0;
   }
 }
 
