--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1380,7 +1380,7 @@ text-transform: uppercase;
   justify-content: space-between;
   padding: 20px 20px;
   box-sizing: border-box; 
-  transition: transform 0.6s, width 0.8s ease-in-out, height 0.6s ease-in-out;
+  transition: transform 0.6s, width 0.5s ease-in-out, height 0.6s ease-in-out;
   z-index: 1;
   top: 150px;
   width: 60%;
@@ -1394,6 +1394,11 @@ text-transform: uppercase;
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
+}
+
+.cu-work-card-appear:hover {
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
+  transform: translateY(-10px);
 }
 
 .cu-work-row-mobile-hide {
