--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1364,8 +1364,8 @@ text-transform: uppercase;
 
 /* Casey */
 .cu-card-details {
-  position : relative;
-  opacity : 1;
+  position: relative;
+  opacity: 1;
 }
 
 .cu-work-card {
@@ -1373,7 +1373,7 @@ text-transform: uppercase;
   transform-origin: center;
   background-color: white;
   border-radius: 15px;
-  margin: 30px 20px;
+  margin: 15px 20px;
   flex-direction: column;
   justify-content: space-between;
   padding: 20px 20px;
@@ -1400,20 +1400,15 @@ text-transform: uppercase;
 }
 
 .cu-work-row-mobile-hide {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
   margin: 10px 0;
 }
 
 .cu-work-row-desktop-hide {
   flex-direction: column;
   display: none;
-}
-
-.cu-work-col {
-  width: 100%;
-  justify-content: center;
-  flex: 1;
 }
 
 .cu-work-bg-img._10 {
