--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1207,7 +1207,7 @@ text-transform: uppercase;
   text-align: center;
   color: #000;
   margin-top: 0px;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .cu-h4-work {
@@ -1639,7 +1639,7 @@ text-transform: uppercase;
 
 .cu-sec-work {
   justify-content: space-between;
-  padding: 5% 10%;
+  padding: 100px 10%;
   background-color: #F3F3F3;
 }
 
