--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1639,7 +1639,7 @@ text-transform: uppercase;
 
 .cu-sec-work {
   justify-content: space-between;
-  padding: 100px 10%;
+  padding: 0 10%;
   background-color: #F3F3F3;
 }
 
