--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1206,8 +1206,8 @@ text-transform: uppercase;
   top: 80px;
   text-align: center;
   color: #000;
-  margin-top: 0px;
-  margin-top: 100px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .cu-h4-work {
