--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1405,10 +1405,11 @@ text-transform: uppercase;
   position: absolute;
   top: 0;
   left: 0;
-  width: 0;
+  width: 100%;
   height: 100%;
   background: #00ade5;
   border-radius: 50px;
+  animation: fill 5s ease;
 }
 
 @keyframes fill {
