--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1409,6 +1409,7 @@ text-transform: uppercase;
   height: 100%;
   background: #00ade5;
   border-radius: 50px;
+  animation: fill 5s ease;
 }
 
 @keyframes fill {
