--- a/css/cu-website.css
+++ b/css/cu-website.css
@@ -1409,13 +1409,23 @@ text-transform: uppercase;
   height: 100%;
   background: #00ade5;
   border-radius: 50px;
-  animation: fill 5s ease;
+  animation: fill 15s ease;
 }
 
 @keyframes fill {
   0% { width: 0% }
+  10% { width: 10% }
+  20% { width: 20% }
+  30% { width: 30% }
+  40% { width: 40% }
+  50% { width: 50% }
+  60% { width: 60% }
+  70% { width: 70% }
+  80% { width: 80% }
+  90% { width: 90% }
   100% { width: 100% }
 }
+
 
 .cu-card-details {
   position: relative;
